@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2017-2022 HERE Europe B.V.
+ * Copyright (C) 2017-2023 HERE Europe B.V.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,45 +18,65 @@
  */
 package com.here.xyz.psql;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+
 import com.amazonaws.util.IOUtils;
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.here.xyz.XyzSerializable;
-import com.here.xyz.events.*;
-import com.here.xyz.models.geojson.coordinates.*;
-import com.here.xyz.models.geojson.implementation.*;
+import com.here.xyz.events.GetFeaturesByGeometryEvent;
+import com.here.xyz.events.GetFeaturesByTileEvent;
+import com.here.xyz.events.GetStatisticsEvent;
+import com.here.xyz.events.ModifyFeaturesEvent;
+import com.here.xyz.events.PropertiesQuery;
+import com.here.xyz.events.PropertyQuery;
+import com.here.xyz.events.PropertyQueryList;
+import com.here.xyz.events.TagsQuery;
+import com.here.xyz.models.geojson.coordinates.BBox;
+import com.here.xyz.models.geojson.coordinates.LineStringCoordinates;
+import com.here.xyz.models.geojson.coordinates.LinearRingCoordinates;
+import com.here.xyz.models.geojson.coordinates.MultiPolygonCoordinates;
+import com.here.xyz.models.geojson.coordinates.PointCoordinates;
+import com.here.xyz.models.geojson.coordinates.PolygonCoordinates;
+import com.here.xyz.models.geojson.coordinates.Position;
+import com.here.xyz.models.geojson.implementation.Feature;
+import com.here.xyz.models.geojson.implementation.FeatureCollection;
+import com.here.xyz.models.geojson.implementation.Geometry;
+import com.here.xyz.models.geojson.implementation.LineString;
+import com.here.xyz.models.geojson.implementation.MultiPolygon;
+import com.here.xyz.models.geojson.implementation.Point;
+import com.here.xyz.models.geojson.implementation.Polygon;
 import com.here.xyz.models.geojson.implementation.Properties;
+import com.here.xyz.models.geojson.implementation.XyzNamespace;
 import com.here.xyz.responses.StatisticsResponse;
 import com.here.xyz.responses.XyzResponse;
+import java.sql.Connection;
+import java.sql.Statement;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.After;
 import org.junit.Before;
-import org.junit.BeforeClass;
 import org.junit.Test;
-
-import java.sql.Connection;
-import java.sql.Statement;
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import static org.junit.Assert.*;
-import static org.junit.Assert.assertNull;
 
 public class PSQLReadIT extends PSQLAbstractIT {
 
-    @BeforeClass
-    public static void init() throws Exception {
-        initEnv(null);
-    }
-
     @Before
-    public void createTable() throws Exception {
+    public void createSpace() throws Exception {
         invokeCreateTestSpace(defaultTestConnectorParams, TEST_SPACE_ID);
     }
 
     @After
-    public void shutdown() throws Exception { invokeDeleteTestSpace(null); }
+    public void shutdown() throws Exception {
+        invokeDeleteTestSpace(null);
+    }
 
     /**
      * Test all branches of the BBox query.
@@ -257,7 +277,7 @@ public class PSQLReadIT extends PSQLAbstractIT {
                 .withConnectorParams(defaultTestConnectorParams)
                 .withSpace("foo")
                 .withTransaction(true)
-                .withEnableUUID(true)
+                .withConflictDetectionEnabled(true)
                 .withInsertFeatures(collection.getFeatures());
 
         invokeLambda(mfevent.serialize());
@@ -377,7 +397,7 @@ public class PSQLReadIT extends PSQLAbstractIT {
         assertEquals(213, featureCollection.getFeatures().size());
 
         Properties properties = featureCollection.getFeatures().get(0).getProperties();
-        assertEquals(new Integer(1), properties.get("foo2"));
+        assertEquals(Integer.valueOf(1), properties.get("foo2"));
         assertNull(properties.get("foo"));
         LOGGER.info("Area Query with MULTIPOLYGON + SELECTION tested successfully");
 
@@ -448,11 +468,11 @@ public class PSQLReadIT extends PSQLAbstractIT {
 
         assertNotNull(response);
 
-        assertEquals(new Long(3), response.getCount().getValue());
+        assertEquals(Long.valueOf(3), response.getCount().getValue());
         assertEquals(false, response.getCount().getEstimated());
 
-        assertTrue(response.getByteSize().getValue() > 0);
-        assertEquals(true, response.getByteSize().getEstimated());
+        assertTrue(response.getDataSize().getValue() > 0);
+        assertEquals(true, response.getDataSize().getEstimated());
 
         assertNotNull(response.getBbox());
         assertEquals(false, response.getBbox().getEstimated());
@@ -490,7 +510,7 @@ public class PSQLReadIT extends PSQLAbstractIT {
                 .withConnectorParams(defaultTestConnectorParams)
                 .withSpace("foo")
                 .withTransaction(true)
-                .withEnableUUID(true)
+                .withConflictDetectionEnabled(true)
                 .withInsertFeatures(collection.getFeatures()); // TODO use get11kFeatureCollection() and extract pKeys
 
         invokeLambda(mfevent.serialize());
@@ -505,10 +525,10 @@ public class PSQLReadIT extends PSQLAbstractIT {
         // =========== GetStatistics ==========
         response = XyzSerializable.deserialize(statisticsJson);
 
-        assertEquals(new Long(11003), response.getCount().getValue());
+        assertEquals(Long.valueOf(11003), response.getCount().getValue());
 
         assertEquals(true, response.getCount().getEstimated());
-        assertEquals(true, response.getByteSize().getEstimated());
+        assertEquals(true, response.getDataSize().getEstimated());
         assertEquals(true, response.getBbox().getEstimated());
         assertEquals(true, response.getTags().getEstimated());
         assertEquals(true, response.getGeometryTypes().getEstimated());
@@ -524,224 +544,9 @@ public class PSQLReadIT extends PSQLAbstractIT {
     }
 
     @Test
-    public void testSearchAndCountByPropertiesAndTags() throws Exception {
-        // prepare the data
-        TypeReference<Map<String, Object>> tr = new TypeReference<Map<String, Object>>() {
-        };
-        ObjectMapper mapper = new ObjectMapper();
-
-        String insertJsonFile = "/events/InsertFeaturesForSearchTestEvent.json";
-        invokeLambdaFromFile(insertJsonFile);
-
-        // retrieve the basic event
-        String basic = IOUtils.toString(this.getClass().getResourceAsStream("/events/BasicSearchByPropertiesAndTagsEvent.json"));
-
-        // Test 1
-        Map<String, Object> test1 = mapper.readValue(basic, tr);
-        Map<String, Object> properties1 = new HashMap<>();
-        properties1.put("key", "properties.name");
-        properties1.put("operation", "EQUALS");
-        properties1.put("values", Collections.singletonList("Toyota"));
-        addPropertiesQueryToSearchObject(test1, false, properties1);
-        addTagsToSearchObject(test1, "yellow");
-        invokeAndAssert(test1, 1, "Toyota");
-
-        // Test 2
-        Map<String, Object> test2 = mapper.readValue(basic, tr);
-        Map<String, Object> properties2 = new HashMap<>();
-        properties2.put("key", "properties.size");
-        properties2.put("operation", "LESS_THAN_OR_EQUALS");
-        properties2.put("values", Collections.singletonList(1));
-        addPropertiesQueryToSearchObject(test2, false, properties2);
-        invokeAndAssert(test2, 2, "Ducati", "BikeX");
-
-        // Test 3
-        Map<String, Object> test3 = mapper.readValue(basic, tr);
-        Map<String, Object> properties3 = new HashMap<>();
-        properties3.put("key", "properties.car");
-        properties3.put("operation", "EQUALS");
-        properties3.put("values", Collections.singletonList(true));
-        addPropertiesQueryToSearchObject(test3, false, properties3);
-        invokeAndAssert(test3, 1, "Toyota");
-
-        // Test 4
-        Map<String, Object> test4 = mapper.readValue(basic, tr);
-        Map<String, Object> properties4 = new HashMap<>();
-        properties4.put("key", "properties.car");
-        properties4.put("operation", "EQUALS");
-        properties4.put("values", Collections.singletonList(false));
-        addPropertiesQueryToSearchObject(test4, false, properties4);
-        invokeAndAssert(test4, 1, "Ducati");
-
-        // Test 5
-        Map<String, Object> test5 = mapper.readValue(basic, tr);
-        Map<String, Object> properties5 = new HashMap<>();
-        properties5.put("key", "properties.size");
-        properties5.put("operation", "GREATER_THAN");
-        properties5.put("values", Collections.singletonList(5));
-        addPropertiesQueryToSearchObject(test5, false, properties5);
-        addTagsToSearchObject(test5, "red");
-        invokeAndAssert(test5, 1, "Toyota");
-
-        // Test 6
-        Map<String, Object> test6 = mapper.readValue(basic, tr);
-        Map<String, Object> properties6 = new HashMap<>();
-        properties6.put("key", "properties.size");
-        properties6.put("operation", "LESS_THAN");
-        properties6.put("values", Collections.singletonList(5));
-        addPropertiesQueryToSearchObject(test6, false, properties6);
-        addTagsToSearchObject(test6, "red");
-        invokeAndAssert(test6, 1, "Ducati");
-
-        // Test 7
-        Map<String, Object> test7 = mapper.readValue(basic, tr);
-        Map<String, Object> properties7 = new HashMap<>();
-        properties7.put("key", "properties.name");
-        properties7.put("operation", "EQUALS");
-        properties7.put("values", Arrays.asList("Toyota", "Tesla"));
-        addPropertiesQueryToSearchObject(test7,  false, properties7);
-        invokeAndAssert(test7, 2, "Toyota", "Tesla");
-
-        // Test 8
-        Map<String, Object> test8 = mapper.readValue(basic, tr);
-        invokeAndAssert(test8, 4, "Toyota", "Tesla", "Ducati", "BikeX");
-
-        // Test 9
-        Map<String, Object> test9 = mapper.readValue(basic, tr);
-        Map<String, Object> properties9 = new HashMap<>();
-        properties9.put("key", "properties.name");
-        properties9.put("operation", "EQUALS");
-        properties9.put("values", Collections.singletonList("Test"));
-        addPropertiesQueryToSearchObject(test9, false, properties9);
-        invokeAndAssert(test9, 0);
-
-        // Test 10
-        Map<String, Object> test10 = mapper.readValue(basic, tr);
-        Map<String, Object> properties10 = new HashMap<>();
-        properties10.put("key", "properties.name");
-        properties10.put("operation", "EQUALS");
-        properties10.put("values", Collections.singletonList("Toyota"));
-        addPropertiesQueryToSearchObject(test10, false, properties10);
-        addTagsToSearchObject(test10, "cyan");
-        invokeAndAssert(test10, 0);
-
-        // Test 11
-        Map<String, Object> test11 = mapper.readValue(basic, tr);
-        Map<String, Object> properties11_1 = new HashMap<>();
-        properties11_1.put("key", "properties.name");
-        properties11_1.put("operation", "EQUALS");
-        properties11_1.put("values", Arrays.asList("Toyota", "Ducati", "BikeX"));
-        Map<String, Object> properties11_2 = new HashMap<>();
-        properties11_2.put("key", "properties.size");
-        properties11_2.put("operation", "EQUALS");
-        properties11_2.put("values", Arrays.asList(1D, 0.3D));
-        addPropertiesQueryToSearchObject(test11, false, properties11_1, properties11_2);
-        invokeAndAssert(test11, 2, "Ducati", "BikeX");
-
-        // Test 12
-        Map<String, Object> test12 = mapper.readValue(basic, tr);
-        Map<String, Object> properties12_1 = new HashMap<>();
-        properties12_1.put("key", "properties.name");
-        properties12_1.put("operation", "EQUALS");
-        properties12_1.put("values", Arrays.asList("Toyota", "Ducati"));
-        Map<String, Object> properties12_2 = new HashMap<>();
-        properties12_2.put("key", "properties.name");
-        properties12_2.put("operation", "EQUALS");
-        properties12_2.put("values", Collections.singletonList("Toyota"));
-        addPropertiesQueryToSearchObject(test12, false, properties12_1);
-        addPropertiesQueryToSearchObject(test12, true, properties12_2);
-        invokeAndAssert(test12, 2, "Toyota", "Ducati");
-
-        // Test 13
-        Map<String, Object> test13 = mapper.readValue(basic, tr);
-        Map<String, Object> properties13_1 = new HashMap<>();
-        properties13_1.put("key", "properties.name");
-        properties13_1.put("operation", "EQUALS");
-        properties13_1.put("values", Collections.singletonList("Toyota"));
-        Map<String, Object> properties13_2 = new HashMap<>();
-        properties13_2.put("key", "properties.name");
-        properties13_2.put("operation", "EQUALS");
-        properties13_2.put("values", Collections.singletonList("Ducati"));
-        addPropertiesQueryToSearchObject(test13, false, properties13_1);
-        addPropertiesQueryToSearchObject(test13, true, properties13_2);
-        invokeAndAssert(test13, 2, "Toyota", "Ducati");
-
-        // Test 14
-        Map<String, Object> test14 = mapper.readValue(basic, tr);
-        Map<String, Object> properties14_1 = new HashMap<>();
-        properties14_1.put("key", "id");
-        properties14_1.put("operation", "GREATER_THAN");
-        properties14_1.put("values", Collections.singletonList(0));
-        addPropertiesQueryToSearchObject(test14, false, properties14_1);
-
-        String response = invokeLambda(mapper.writeValueAsString(test14));
-        FeatureCollection responseCollection = XyzSerializable.deserialize(response);
-        List<Feature> responseFeatures = responseCollection.getFeatures();
-        String id = responseFeatures.get(0).getId();
-        assertEquals("Check size", 4, responseFeatures.size());
-
-        Map<String, Object> test15 = mapper.readValue(basic, tr);
-        Map<String, Object> properties15_1 = new HashMap<>();
-        properties15_1.put("key", "id");
-        properties15_1.put("operation", "EQUALS");
-        properties15_1.put("values", Collections.singletonList(id));
-        addPropertiesQueryToSearchObject(test15, false, properties15_1);
-        addPropertiesQueryToSearchObject(test15, true, properties15_1);
-
-        response = invokeLambda(mapper.writeValueAsString(test15));
-        responseCollection = XyzSerializable.deserialize(response);
-        responseFeatures = responseCollection.getFeatures();
-        assertEquals(1, responseFeatures.size());
-
-        // Test 15
-        Map<String, Object> test16 = mapper.readValue(basic, tr);
-        test16.put("type", "IterateFeaturesEvent");
-        test16.put("handle", "1");
-        invokeAndAssert(test16, 3, "Tesla", "Ducati", "BikeX");
-    }
-
-    @Test
     public void testIterate() throws Exception {
         final String response = invokeLambdaFromFile("/events/IterateMySpace.json");
         final FeatureCollection features = XyzSerializable.deserialize(response);
         features.serialize(true);
-    }
-
-    @SafeVarargs
-    protected final void addPropertiesQueryToSearchObject(Map<String, Object> json, boolean or, Map<String, Object>... objects) {
-        if (!json.containsKey("propertiesQuery")) {
-            json.put("propertiesQuery", new ArrayList<List<Map<String, Object>>>());
-        }
-
-        @SuppressWarnings({"unchecked", "rawtypes"}) final List<List<Map<String, Object>>> list = (List) json.get("propertiesQuery");
-        if (or) {
-            list.add(Arrays.asList(objects));
-            return;
-        }
-
-        if (list.size() == 0) {
-            list.add(Arrays.asList(objects));
-            return;
-        }
-
-        list.get(0).addAll(Arrays.asList(objects));
-    }
-
-    protected void addTagsToSearchObject(Map<String, Object> json, String... tags) {
-        json.remove("tags");
-        json.put("tags", new ArrayList<String>());
-        ((List) json.get("tags")).add(new ArrayList(Arrays.asList(tags)));
-    }
-
-    protected void invokeAndAssert(Map<String, Object> json, int size, String... names) throws Exception {
-        String response = invokeLambda(new ObjectMapper().writeValueAsString(json));
-
-        final FeatureCollection responseCollection = XyzSerializable.deserialize(response);
-        final List<Feature> responseFeatures = responseCollection.getFeatures();
-        assertEquals("Check size", size, responseFeatures.size());
-
-        for (int i = 0; i < size; i++) {
-            assertEquals("Check name", names[i], responseFeatures.get(i).getProperties().get("name"));
-        }
     }
 }
